mv canonical /en → /en/

--- a/_layouts/en-index.html
+++ b/_layouts/en-index.html
@@ -9,12 +9,12 @@
     <meta property="og:site_name" content="Nova Patch">
     <meta property="og:title" content="Nova Patch">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://novapatch.ie/en">
+    <meta property="og:url" content="https://novapatch.ie/en/">
     <title>Nova Patch</title>
-    <link rel="alternate" href="https://novapatch.ie/en" hreflang="en">
+    <link rel="alternate" href="https://novapatch.ie/en/" hreflang="en">
     <link rel="alternate" href="https://novapatch.ie/" hreflang="x-default">
     <link rel="author" href="https://novapatch.ie/en/about">
-    <link rel="canonical" href="https://novapatch.ie/en">
+    <link rel="canonical" href="https://novapatch.ie/en/">
     <link rel="stylesheet" href="/css/site.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=EB+Garamond&display=swap">
   </head>
