--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,20 +1,16 @@
-<!DOCTYPE html>
-<html>
-
+<!doctype html>
+<html lang="en">
   {% include head.html %}
-
   <body>
-
-    {% include header.html %}
-
+    <header class="site-header">
+      <div class="wrapper">
+        <a class="site-title" href="{{ site.baseurl }}/en/">{{ site.title }}</a>
+      </div>
+    </header>
     <div class="page-content">
       <div class="wrapper">
         {{ content }}
       </div>
     </div>
-
-    {% include footer.html %}
-
   </body>
-
 </html>
